<resources>
    <string name="app_name">Words Masta</string>
    <string name="title_activity_import_data">ImportDataActivity</string>
    <string name="import_data_caption">Select a file to import</string>
    <string name="choose_file_button">Click to select</string>
    <string name="open_import_data_activity_btn">Import words</string>
    <string name="open_words_learning_activity_btn">Learn words</string>
    <string name="importStatusLabel">Import status:</string>
    <string name="title_activity_words_learning_preparation">WordsLearningPreparationActivity
    </string>
    <string name="choseSourceLangCodeLabel">From language</string>
    <string name="choseTargetLangCodeLabel" >To language</string>
    <string name="wordsGroupLabel">Words group</string>
    <string name="project_name">Words Masta</string>
    <string name="app_slogan">learn words with ease</string>
    <string name="letsGo">Let\'s GO!</string>
    <string name="customizeParams">Customize parameters</string>
    <string name="go_back">Go back</string>
    <string name="exit">Exit</string>
</resources>
