<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ImportDataActivity">

    <EditText
        android:id="@+id/importCaption"
        android:layout_width="281dp"
        android:layout_height="41dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/import_data_caption"
        android:inputType="textPersonName"
        android:text="@string/import_data_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/choseFileForImportBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_file_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importCaption"
        app:layout_constraintVertical_bias="0.317" />

    <EditText
        android:id="@+id/importStatusLabel"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/importStatusLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importCaption" />

    <TextView
        android:id="@+id/importStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/importStatusLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/importStatusLabel"
        app:layout_constraintTop_toTopOf="@+id/importStatusLabel"
        app:layout_constraintVertical_bias="0.461" />

</androidx.constraintlayout.widget.ConstraintLayout>