<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WordsLearningPreparationActivity">

    <EditText
        android:id="@+id/targetLanguageCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="284dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/choseTargetLangCodeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/targetLanguageCode"
        android:layout_width="115dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/targetLanguageCodeLabel"
        app:layout_constraintStart_toEndOf="@+id/targetLanguageCodeLabel"
        app:layout_constraintTop_toTopOf="@+id/targetLanguageCodeLabel"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/sourceLanguageCode"
        android:layout_width="115dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/sourceLanguageCodeLabel"
        app:layout_constraintStart_toEndOf="@+id/sourceLanguageCodeLabel"
        app:layout_constraintTop_toTopOf="@+id/sourceLanguageCodeLabel"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/sourceLanguageCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/choseSourceLangCodeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startWordsLearningBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="128dp"
        android:text="@string/open_words_learning_activity_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>